--- a/BarChart.html
+++ b/BarChart.html
@@ -4,7 +4,7 @@
 
 <html>
   <head>
-  	<script type="text/javascript" src="d3/d3.js"></script>
+  	<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <script type="text/javascript" src="BasicPlots.js"></script>
