--- a/BarChart.html
+++ b/BarChart.html
@@ -13,18 +13,60 @@
 		var w = window.innerWidth;
 		var h = window.innerHeight*0.5;
 	
-		var groups = ['one','one','one','one','one',2,2,2,2,2,3,3,3,3,3,4,4,4,4,4];
-		var y = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,13,14,15,1,10];
-		var x = [3,2,5,1,3,5,7,2,7,18,5,1,4,7,9,4,3,2,1,8];
-		var cols = ['testing',2,3,4,'testing',2,3,4,'testing',2,3,4,'testing',2,3,4,'testing',2,3,4];
-		var colsch = ['lightgrey','darkgrey', 'grey', '#505050'];
-
-	
-		var Bar = d3.select("body").append("svg").attr("width", w).attr("height", h);
-
-		X = barChart(Bar, groups,y, 'SE', true, cols, null, null, null, 'Title', 'Xlab', 'Ylab', colsch, true);
+		var groups = ["Neutral", "Sadness", "Anger", "Joy", "Surprise", "Disgust", "Fear", "Neutral", "Sadness", "Fear", "Anger", "Joy", "Surprise", "Disgust"];
+		var y = [0.883, 0.789, 0.760, 0.758, 0.722, 0.726,0.690, 0.781, 0.755, 0.723, 0.782, 0.688, 0.781, 0.675];
+		var x = [0.021, 0.021, 0.021, 0.021, 0.021, 0.021, 0.021, 0.023, 0.023, 0.023, 0.023, 0.023, 0.023, 0.023];
+		var cols = ["Experiment 1","Experiment 1","Experiment 1","Experiment 1","Experiment 1","Experiment 1","Experiment 1","Experiment 2","Experiment 2","Experiment 2","Experiment 2","Experiment 2","Experiment 2","Experiment 2"];
+		var colsch = ['teal','blue', 'grey', '#505050'];
 		
+		container = d3.select("body").append("div")
+		
+		function initialize(){
+			var Bar = container.append("svg").attr("id", "plot").attr("width", w).attr("height", h);
+
+			X = new barChart(Bar, groups,y, 0.021, cols, null, null, null, 'Title', 'Xlab', 'Ylab', colsch, true);
+		
+			return [X, Bar];
+		
+		}
+		
+		function download(){
+			var a = document.body.appendChild(
+					document.createElement("a")
+			);
+			//get svg source.
+			
+			svg = document.getElementById('plot');
+			
+			var serializer = new XMLSerializer();
+			var source = serializer.serializeToString(svg);
+
+			//add name spaces.
+			if(!source.match(/^<svg[^>]+xmlns="http\:\/\/www\.w3\.org\/2000\/svg"/)){
+					source = source.replace(/^<svg/, '<svg xmlns="http://www.w3.org/2000/svg"');
+			}
+			if(!source.match(/^<svg[^>]+"http\:\/\/www\.w3\.org\/1999\/xlink"/)){
+					source = source.replace(/^<svg/, '<svg xmlns:xlink="http://www.w3.org/1999/xlink"');
+			}
+
+			//add xml declaration
+			source = '<?xml version="1.0" standalone="no"?>\r\n' + source;
+
+			//convert svg source to URI data scheme.
+			var url = "data:image/svg+xml;charset=utf-8,"+encodeURIComponent(source);
+			
+			a.download = "export.svg";
+			a.href = url; // Grab the HTML
+			a.click(); // Trigger a click on the element
+		}
+  	
+  	[X, Bar] = initialize();
   	
   	</script>
+  	
+  	<button type="button" onclick="X.legend()">Add legend</button>
+  	<button type="button" onclick="X.errorbars()">Add Error Bars</button>
+  	<button type="button" onclick="Bar.remove();[X, Bar] = initialize();">Reset</button>
+  	<button type="button" onclick="download();">Download</button>
   </body>
 </html>
