--- a/index.html
+++ b/index.html
@@ -8,8 +8,65 @@
   </head>
   <body>
     <script type="text/javascript" src="BasicPlots.js"></script>
+		<article>
+			<div id="holder">
+			</div> 
+			<p id="upload" class="hidden"><label>Drag &amp; drop not supported, but you can still upload via this input field:<br><input type="file"></label></p>
+			<p id="filereader">File API &amp; FileReader API not supported</p>
+			<p id="formdata">XHR2's FormData is not supported</p>
+			<p id="progress">XHR2's upload progress isn't supported</p>
+			<p>Upload progress: <progress id="uploadprogress" min="0" max="100" value="0">0</progress></p>
+			<p>Drag an image from your desktop on to the drop zone above to see the browser both render the preview, but also upload automatically to this server.</p>
+		</article>
     <script>
 		
+		var holder = document.getElementById('holder'),
+    tests = {
+      filereader: typeof FileReader != 'undefined',
+      dnd: 'draggable' in document.createElement('span'),
+      formdata: !!window.FormData,
+      progress: "upload" in new XMLHttpRequest
+    }, 
+    support = {
+      filereader: document.getElementById('filereader'),
+      formdata: document.getElementById('formdata'),
+      progress: document.getElementById('progress')
+    },
+    acceptedTypes = {
+      'csv': true,
+    },
+    progress = document.getElementById('uploadprogress'),
+    fileupload = document.getElementById('upload');
+		
+		"filereader formdata progress".split(' ').forEach(function (api) {
+			if (tests[api] === false) {
+				support[api].className = 'fail';
+			} else {
+				// FFS. I could have done el.hidden = true, but IE doesn't support
+				// hidden, so I tried to create a polyfill that would extend the
+				// Element.prototype, but then IE10 doesn't even give me access
+				// to the Element object. Brilliant.
+				support[api].className = 'hidden';
+			}
+		});
+		
+		if (tests.dnd) { 
+			holder.ondragover = function () { this.className = 'hover'; return false; };
+			holder.ondragend = function () { this.className = ''; return false; };
+			holder.ondrop = function (e) {
+				this.className = '';
+				e.preventDefault();
+				[X, Bar] = initialize();
+			}
+		} else {
+			fileupload.className = 'hidden';
+			fileupload.querySelector('input').onchange = function () {
+				debugger;
+				[X, Bar] = initialize();
+			};
+		};
+		
+		{
 		var w = window.innerWidth;
 		var h = window.innerHeight*0.5;
 	
@@ -60,8 +117,7 @@
 			a.click(); // Trigger a click on the element
 		}
   	
-  	[X, Bar] = initialize();
-  	
+  	}
   	</script>
   	
   	<button type="button" onclick="X.legend()">Add legend</button>
